# learn-cuda-with-AI

./: CMAKE_USAGE.md  CMakeLists.txt  CMakePresets.json  CUDA_OCCUPANCY_GUIDE.md  CUDNN_INSTALLATION.md  GPU_UTILIZATION_GUIDE.md  IDE_SETUP.md  Makefile  NCU_USAGE.md  NSYS_USAGE.md  README.md  WARP_PRIMITIVES_EXPLAINED.md  block_shared_memory.md  install_clangd.sh  insufficient_threads_demo.cu  performance_analysis_guide.md  performance_guide.md  shared_memory_explained.cu  threading_concepts.md  triton_softmax.py  vector_add_optimized.cu
src/matmul/: matmul_optimized.cu
src/softmax/: README.md  softmax_basic.cu  softmax_optimized.cu  warp_shuffle_demo.cu
src/utils/: perf.cu  perf.h
src/vector_add/: INSTALL.md  block_essence_chinese.cu  block_isolation_demo.cu  cuda_threading_explained.cu  hardware_mapping.md  hardware_mapping_explained.cu  profile_vector_add.sh  remote_profile.sh  remote_profiling_guide.md  vector_add.cu  vector_add_2d.cu
